@@ -1,5 +1,6 @@
 2011-01-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* actor/favicon.py: Added checking to my flickr photo for favoring.
 	* base/base.py, actor/info.py: Added support for changing zoom
 	  level for map.
 	* constants.py: Added checking for user directory permissions.
